--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,25 +3,25 @@ spring.application.name=depropdemo
 server.port=8080
 
 # Hibernate Properties
-#spring.datasource.url=jdbc:mysql://localhost:3306/depropdtb?allowPublicKeyRetrieval=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8
-#spring.datasource.username=root
-#spring.datasource.password=Mtnt125..
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/depropdtb?allowPublicKeyRetrieval=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=
 #
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;database=depropdtb;encrypt=true;trustServerCertificate=true
-spring.datasource.username=sa
-spring.datasource.password=123123
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.datasource.url=jdbc:sqlserver://localhost:1433;database=depropdtb;encrypt=true;trustServerCertificate=true
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.sql.init.mode=always
 
 # Upload Image
 spring.servlet.multipart.max-file-size=10MB
