--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=depropdemo
 server.port=8080
 
 # Hibernate Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/depropdtb?allowPublicKeyRetrieval=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/depropdtb?allowPublicKeyRetrieval=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
 #
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #spring.jpa.hibernate.ddl-auto=update
