--- a/.github/workflows/java-cicd.yml
+++ b/.github/workflows/java-cicd.yml
@@ -42,6 +42,7 @@ jobs:
           SPRING_DATASOURCE_URL: jdbc:mysql://localhost:3306/testdb?allowPublicKeyRetrieval=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8
           SPRING_DATASOURCE_USERNAME: testuser
           SPRING_DATASOURCE_PASSWORD: testpassword
+
   docker:
     name: Docker
     needs: build
@@ -54,18 +55,19 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - if: github.event.inputs.push_to_docker == 'true'
+      - if: github.event_name == 'workflow_dispatch' && github.event.inputs.push_to_docker == 'true'
         name: Build Image
         working-directory: ./
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/webapp .
           docker push ${{ secrets.DOCKER_USERNAME }}/webapp --all-tags
+
   deploy:
     name: Deploy
     needs: docker
     runs-on: ubuntu-latest
     steps:
-      - if: github.event.inputs.deploy_to_test == 'true'
+      - if: github.event_name == 'workflow_dispatch' && github.event.inputs.deploy_to_test == 'true'
         name: Deploy to test
         uses: easingthemes/ssh-deploy@v5.0.3
         with:
@@ -79,7 +81,7 @@ jobs:
           SCRIPT_AFTER: |
             cd ${{ secrets.WORK_DIR_TEST }} && docker compose pull test && docker compose up -d test
             echo $RSYNC_STDOUT
-      - if: github.event.inputs.deploy_to_prod == 'true'
+      - if: github.event_name == 'workflow_dispatch' && github.event.inputs.deploy_to_prod == 'true'
         name: Deploy to prod
         uses: easingthemes/ssh-deploy@v5.0.3
         with:
