--- a/.github/workflows/java-cicd.yml
+++ b/.github/workflows/java-cicd.yml
@@ -42,6 +42,11 @@ jobs:
           SPRING_DATASOURCE_URL: jdbc:mysql://localhost:3306/testdb?allowPublicKeyRetrieval=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8
           SPRING_DATASOURCE_USERNAME: testuser
           SPRING_DATASOURCE_PASSWORD: testpassword
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: target
+          path: target
   docker:
     name: Docker
     needs: build
@@ -49,6 +54,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: target
       - name: Docker Login
         uses: docker/login-action@v3
         with:
