--- a/.github/workflows/java-cicd.yml
+++ b/.github/workflows/java-cicd.yml
@@ -42,9 +42,26 @@ jobs:
           SPRING_DATASOURCE_URL: jdbc:mysql://localhost:3306/testdb?allowPublicKeyRetrieval=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8
           SPRING_DATASOURCE_USERNAME: testuser
           SPRING_DATASOURCE_PASSWORD: testpassword
-
-      - name: Docker
-        uses: docker/build-push-action@v3
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: target
+          path: target
+  docker:
+    name: Docker
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: target
+      - name: Move artifacts
+        run: mv target/* .
+      - name: Docker Login
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
@@ -53,27 +70,6 @@ jobs:
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/webapp .
           docker push ${{ secrets.DOCKER_USERNAME }}/webapp --all-tags
-#  docker:
-#    name: Docker
-#    needs: build
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v4
-#      - name: Download artifact
-#        uses: actions/download-artifact@v3
-#        with:
-#          name: target
-#      - name: Docker Login
-#        uses: docker/login-action@v3
-#        with:
-#          username: ${{ secrets.DOCKER_USERNAME }}
-#          password: ${{ secrets.DOCKER_PASSWORD }}
-#      - name: Build Image
-#        working-directory: ./
-#        run: |
-#          docker build -t ${{ secrets.DOCKER_USERNAME }}/webapp .
-#          docker push ${{ secrets.DOCKER_USERNAME }}/webapp --all-tags
   deploy:
     name: Deploy
     needs: docker
